@@ -1,3 +1,7 @@
+DNAnexus Upload Agent 1.4.8 <support@dnanexus.com>, 2013-Dec-01
+---------------------------------------------------------------
+  * Fix broken 1.4.7 release.
+
 DNAnexus Upload Agent 1.4.7 <support@dnanexus.com>, 2013-Nov-19
 ---------------------------------------------------------------
   * Build improvements.
